--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,138 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap');
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Remove default margin */
+* {
   margin: 0;
+  padding: 0;
+  font: inherit;
+}
+
+html, 
+body {
+  height: 100%;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture,
+svg {
+  max-width: 100%;
+  display: block;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+   scroll-behavior: auto;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+/* ####### CUSTOM PROPERTIES ###### */
+
+/* colors */
+:root {
+
+  --color-neutral-500: hsl(210, 46%, 95%); /* bg white */
+  --color-neutral-700: hsl(212, 23%, 69%); /* color behind share icon */
+
+  --color-primary-500: hsl(214, 17%, 51%); /* font color */
+  --color-primary-700: hsl(217, 19%, 35%); /* bg of SHARE */
+  
+  --fs-700: clamp(1.25rem, 2vw + 1rem, 1.75rem);
+  --fs-500: 1rem;
+
+  --fw-500: 500;
+  --fw-700: 700;
+
+  --ff-primary: 'Manrope';
+
+}
+
+body {
+  font-family: var(--ff-primary, sans-serif);
+}
+
+/* UTILITY CLASSESS */
+.ff-primary {
+  font-family: var(--ff-primary, sans-serif);
+}
+
+.fs-500 {
+  font-size : var(--fs-500);
+}
+
+.fs-700 {
+  font-size : var(--fs-700);
+}
+
+.fw-500{
+  font-weight: var(--fw-500);
+}
+
+.fw-700{
+  font-weight: var(--fw-700);
+}
+
+.bg-color-neutral-500 {
+  background: var(--color-neutral-500);
+}
+.bg-color-neutral-700 {
+  background: var(--color-neutral-700);
+}
+.bg-color-primary-500 {
+  background: var(--color-primary-500);
+}
+.bg-color-primary-700 {
+  background: var(--color-primary-700);
+}
+
+.fc-color-neutral-500 {
+  color: var(--color-neutral-500);
+}
+.fc-color-neutral-700 {
+  color: var(--color-neutral-700);
+}
+.fc-color-primary-500 {
+  color: var(--color-primary-500);
+}
+.fc-color-primary-700 {
+  color: var(--color-primary-700);
 }
