added spacing styles and background colors

--- a/src/style.scss
+++ b/src/style.scss
@@ -70,6 +70,7 @@ svg {
 /* colors */
 :root {
 
+  --color-neutral-100: #fff;
   --color-neutral-500: hsl(210, 46%, 95%); /* bg white */
   --color-neutral-700: hsl(212, 23%, 69%); /* color behind share icon */
 
@@ -111,6 +112,10 @@ body {
   font-weight: var(--fw-700);
 }
 
+.bg-color-neutral-100 {
+  background: var(--color-neutral-100);
+}
+
 .bg-color-neutral-500 {
   background: var(--color-neutral-500);
 }
@@ -135,4 +140,52 @@ body {
 }
 .fc-color-primary-700 {
   color: var(--color-primary-700);
+}
+
+.container {
+  width: min(90%, 120rem);
+}
+
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.spacing > * + * {
+  --spacer: 0.75rem;
+  margin-top: var(--spacer, 2rem);
+}
+
+/* STYLES */
+.card {
+
+  &__text-section {
+    margin-top: 1.5rem;
+    margin-inline: 1rem;
+
+  }
+
+  &__text-one {
+    line-height: 1.75rem;
+
+  }
+
+  &__text-two {
+
+  }
+
+}
+
+.profile {
+  margin-bottom: 0.75rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  &__image {
+    width: 4rem;
+    border-radius: 50vh;
+  }
 }
